--- a/ios/Goo/test.yaml
+++ b/ios/Goo/test.yaml
@@ -1,4 +1,5 @@
 padding: 30
+spacing: 30
 background: fff
 children:
 
@@ -8,8 +9,7 @@ children:
     height: 100
     background: f00
 
-  - top: 160
-    left: 30
+  - left: 30
     right: 30
     height: 100
     background: 00f
@@ -18,6 +18,7 @@ children:
     width: 100
     height: 100
     background: 0f0
+    ignore-layout: true
 
   - anchor: bottom-fill
     left: 30
@@ -25,3 +26,4 @@ children:
     bottom: 30
     height: 100
     background: ff0
+    ignore-layout: true
