--- a/android/app/src/main/assets/test.yaml
+++ b/android/app/src/main/assets/test.yaml
@@ -4,21 +4,17 @@ padding:
 children:
 
   - layout: horizontal
-    distribute: horizontal
     padding: 20
     spacing: 20
     height: 240
     background: ffc
     children:
 
-      - anchor: left-fill
-        right: 10
-        width: 200
-        weight: 0
+      - height: 200
         background: e00
 
-      - anchor: fill
+      - height: 200
         background: 0c0
 
-      - anchor: fill
+      - height: 200
         background: 00e
