--- a/android/app/src/main/assets/vertical.yaml
+++ b/android/app/src/main/assets/vertical.yaml
@@ -1,5 +1,4 @@
 padding: 30
-spacing: 30
 background: fff
 children:
 
@@ -9,16 +8,16 @@ children:
     height: 100
     background: f00
 
-  - left: 30
-    right: 30
-    height: 100
+  - top: 160
+    left: 60
+    right: 60
+    height: 60
     background: 00f
 
   - anchor: center
     width: 100
     height: 100
     background: 0f0
-    ignore-layout: true
 
   - anchor: bottom-fill
     left: 30
@@ -26,4 +25,3 @@ children:
     bottom: 30
     height: 100
     background: ff0
-    ignore-layout: true
