--- a/android/app/src/main/assets/relative.yaml
+++ b/android/app/src/main/assets/relative.yaml
@@ -8,19 +8,19 @@ children:
     height: 100
     background: f00
 
-  - top: 160
+  - below: previous
+    top: 10
     left: 60
     right: 60
     height: 60
     background: 00f
 
-  - anchor: center
-    width: 100
+  - width: 100
     height: 100
+    center: both
     background: 0f0
 
-  - anchor: bottom-fill
-    left: 30
+  - left: 30
     right: 30
     bottom: 30
     height: 100
